# barest-metal-test

./: CMakeLists.txt  ldscript.ld
src/: bootstrap.cpp  main.cpp
